# squealer

./: TODO.mdwn  default.nix  shell.nix  squealer.cabal
examples/scd/: SCD.yaml  test.sql
extra/: .gitignore  serve.hs  squealer-graph.hs
lib/Database/: Squealer.hs
lib/Database/Squealer/: PostgreSQL.hs  Types.hs
templates/: load.sht  schema.sqlt
templates/backend/: active.sqlt  identity.sqlt  journal.sqlt  revocation.sqlt  succession.sqlt
templates/backend/columns/: reference.sqlt
templates/backend/columns/attribute/: proxy.sqlt  state.sqlt
templates/backend/identity/: attribute.sqlt  keyunique.sqlt  reference.sqlt
templates/frontend/: version.sqlt  view.sqlt
templates/frontend/query/join/columns/: attribute.sqlt  reference.sqlt
templates/frontend/query/join/key/: reference.sqlt
templates/frontend/query/select/columns/: attribute.sqlt  reference.sqlt
templates/frontend/query/select/columns/reference/: referredkey.sqlt
templates/frontend/query/select/key/: attribute.sqlt  reference.sqlt
templates/frontend/triggers/column/attribute/: function.sqlt  trigger.sqlt
templates/frontend/triggers/column/attribute/function/: identityjoin.sqlt
templates/frontend/triggers/column/reference/insert/: function.sqlt  trigger.sqlt
templates/frontend/triggers/column/reference/update/: function.sqlt  trigger.sqlt
templates/frontend/triggers/core/delete/: function.sqlt  trigger.sqlt
templates/frontend/triggers/core/insert/: function.sqlt  trigger.sqlt
templates/frontend/triggers/core/insert/function/: loadreferredidentity.sqlt  referencecolumn.sqlt  referencejoin.sqlt  referencenewcolumn.sqlt  referencenullcheck.sqlt  surrogatenullcheck.sqlt
templates/frontend/triggers/core/update/: function.sqlt  trigger.sqlt
templates/frontend/triggers/core/update/function/: assignreferredversion.sqlt  joinactive.sqlt  joindelete.sqlt  joinnewidentity.sqlt  nullcheck.sqlt  referredidentity.sqlt  surrogatenullcheck.sqlt
templates/frontend/triggers/reference/cascade/: trigger.sqlt
templates/frontend/triggers/reference/cascade/function/: delete.sqlt  update.sqlt
templates/frontend/triggers/reference/restrict/: function.sqlt  trigger.sqlt
(+16 files in other folders)
