name         : squealer
version      : 0.2
synopsis     : PostgreSQL DDL generator for auditable databases
description  : Squealer is a SQL DDL generator targeting
               specifically PostgreSQL's dialect of SQL.  It
               consumes a database description encoded in YAML and
               generates the necessary SQL DDL commands to create
               a matching database with support for tracking data
               changes and referencing historical data from
               current, active data.
license      : BSD3
license-file : LICENSE
author       : Manuel Gómez
maintainer   : targen@gmail.com
copyright    : © Manuel Gómez, 2014
category     : Database
build-type   : Simple
cabal-version: >=1.10
-- extra-source-files:

executable squealer
  hs-source-dirs  : bin
  main-is         : Main.hs
  default-language: Haskell2010

  ghc-options:
    -Wall

  -- other-modules:

  build-depends:
      base                 >= 4.5      && < 4.7
    , base-unicode-symbols >= 0.2.2.4  && < 0.3
    , bytestring           >= 0.9.2.1  && < 0.11
    , cmdargs              >= 0.10.3   && < 0.11
    , directory            >= 1.1.0.2  && < 1.3
    , newtype              >= 0.2      && < 0.3
    , squealer             >= 0.2      && < 0.3
    , text                 >= 0.11.2.3 && < 1.1
    , yaml                 >= 0.8.2.4  && < 0.9

library
  hs-source-dirs  : lib
  default-language: Haskell2010

  ghc-options:
    -Wall

  exposed-modules:
    Database.Squealer
    Database.Squealer.Types
    Database.Squealer.PostgreSQL

  -- other-modules:

  build-depends:
      aeson                >= 0.6.2.1  && < 0.8
    , base                 >= 4.5      && < 4.7
    , base-unicode-symbols >= 0.2.2.4  && < 0.3
    , containers           >= 0.4.2.1  && < 0.6
    , lens                 >= 3.10.0.1 && < 4.1
    , newtype              >= 0.2      && < 0.3
    , shakespeare-text     >= 1.0.2    && < 1.1
    , shell-escape         >= 0.1.2    && < 0.2
    , text                 >= 0.11.2.3 && < 1.1
    , utility-ht           >= 0.0.9    && < 0.1
